--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,53 +1,46 @@
-.Home-Page
-{
+.Home-Page {
     width: 100%;
     height: 1000px;
 }
 
-.Upload-Header
-{
+.Upload-Header {
     width: 100%;
     height: 382px;
-    background-color: rgba(0,49,69,255);
+    background-color: rgba(0, 49, 69, 255);
     position: absolute;
-    /* background-image: url("C:\Users\HP\OneDrive\Desktop\Intern-assign\assign1\public\assets\waves1.jpg"); */
 }
 
-.Waves
-{
+.Waves {
     position: absolute;
     z-index: 1;
     top: 100px;
     left: 745px;
 }
 
-.Bulb
-{
+.Bulb {
     position: absolute;
-    z-index: 2;    /* Place this image in front of the img1 */
+    z-index: 2;
+    /* Place this image in front of the img1 */
     top: 50px;
     width: 12%;
     left: 1200px;
 }
 
-.Hackathon-Submissions
-{
+.Hackathon-Submissions {
     margin-left: 100px;
     margin-top: 80px;
     color: white;
 }
 
-.Intro
-{
+.Intro {
     margin-left: 100px;
     font-size: 20px;
     width: 800px;
     color: white;
 }
 
-.Upload-btn
-{
-    background-color: rgba(68,146,76,255);
+.Upload-btn {
+    background-color: rgba(68, 146, 76, 255);
     margin-left: 100px;
     margin-top: 20px;
     width: 200px;
@@ -59,7 +52,6 @@
     cursor: pointer;
 }
 
-.Display-Comp
-{
+.Display-Comp {
     margin-top: 400px;
 }
